// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      expenses
    </div>
    <div
      className="show-for-desktop"
    >
      expense
    </div>
    <div
      className="show-for-desktop"
    >
      amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        no expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render expenses list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      expenses
    </div>
    <div
      className="show-for-desktop"
    >
      expense
    </div>
    <div
      className="show-for-desktop"
    >
      amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItems
      amount={195}
      createdAt={0}
      description="gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItems
      amount={109500}
      createdAt={-345600000}
      description="rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItems
      amount={4500}
      createdAt={345600000}
      description="credit card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
